--- a/src/Components/StartupScreen.css
+++ b/src/Components/StartupScreen.css
@@ -6,7 +6,6 @@
   align-items: center;
   height: 100vh;
   background-color: #f0f0f0;
-  background-image: url('./public/startup.gif');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -14,7 +13,7 @@
 
 .startup-logo {
   max-width: 300px;
-  margin-bottom: 20px;
+  margin-bottom: 20x;
   animation: fadeInZoom 1.5s ease-in-out;
 }
 
