--- a/src/Components/StartupScreen.css
+++ b/src/Components/StartupScreen.css
@@ -6,6 +6,7 @@
   align-items: center;
   height: 100vh;
   background-color: #f0f0f0;
+  background-image: url('/public/startup.gif');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -13,7 +14,7 @@
 
 .startup-logo {
   max-width: 300px;
-  margin-bottom: 20x;
+  margin-bottom: 20px;
   animation: fadeInZoom 1.5s ease-in-out;
 }
 
